--- a/TgyAspNetCoreApp.Web/appsettings.json
+++ b/TgyAspNetCoreApp.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "Data Source=DESKTOP-ERCANKR\\SQLEXPRESS;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    /*"Data Source=ERCANKRC;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"*/
+    "SqlCon": /*"Data Source=DESKTOP-ERCANKR\\SQLEXPRESS;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",*/
+    "Data Source=ERCANKRC;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
