--- a/TgyAspNetCoreApp.Web/appsettings.json
+++ b/TgyAspNetCoreApp.Web/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "baseUrl": "baseUrl",
+
+  "Keys": {
+    "Sms": "sms-key",
+    "email": "email-key"
+  },
+
   "ConnectionStrings": {
     "SqlCon": /*"Data Source=DESKTOP-ERCANKR\\SQLEXPRESS;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",*/
     "Data Source=ERCANKRC;Initial Catalog=TurkcellDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
